[B]Version 0.2.7[/B]
- Added song reporting for an 8tracks requirement.
- Added user login and listing of liked mixes.

[B]Version 0.2.1[/B]
- Porting to Frodo

[B]Version 0.2.0[/B]
- Fix song info in osd for xbox and dharma
- allow manual entry of tags

[B]Version 0.1.0[/B]
- Initial version