@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.audio.8tracks" 
-  version="0.2.7" 
+  version="0.2.8" 
   name="8tracks" 
   provider-name="Chisholm, Stephen">
     <requires>
